# picdl-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/boosty/: mod.rs  types.rs
src/gelbooru/: error.rs  mod.rs
src/http/: client.rs  mod.rs  reqwest.rs  test_client.rs
