[package]
name = "picdl-rs"
version = "0.1.1"
authors = ["corrupt"]
edition = "2021"
repository = "https://github.com/korupi/picdl-rs"
description = "A Rust library to download pictures from some services"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.12.9", features = ["socks", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
